test/scc/decl/semantic-errors/022.t
struct 
{
    int a;
    struct C c;
};